syntax = "proto3";
package paw.oracle.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "paw/oracle/v1/oracle.proto";

option go_package = "github.com/paw-chain/paw/x/oracle/types";

// Query defines the gRPC querier service.
service Query {
  // Price queries the current price for a specific asset
  rpc Price(QueryPriceRequest) returns (QueryPriceResponse) {
    option (google.api.http).get = "/paw/oracle/v1/price/{asset}";
  }

  // Prices queries all current prices
  rpc Prices(QueryPricesRequest) returns (QueryPricesResponse) {
    option (google.api.http).get = "/paw/oracle/v1/prices";
  }

  // Validator queries oracle validator information
  rpc Validator(QueryValidatorRequest) returns (QueryValidatorResponse) {
    option (google.api.http).get = "/paw/oracle/v1/validator/{validator_addr}";
  }

  // Validators queries all oracle validators
  rpc Validators(QueryValidatorsRequest) returns (QueryValidatorsResponse) {
    option (google.api.http).get = "/paw/oracle/v1/validators";
  }

  // ValidatorPrice queries a validator's submitted price for an asset
  rpc ValidatorPrice(QueryValidatorPriceRequest) returns (QueryValidatorPriceResponse) {
    option (google.api.http).get = "/paw/oracle/v1/validator/{validator_addr}/price/{asset}";
  }

  // Params queries the oracle module parameters
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/paw/oracle/v1/params";
  }
}

// QueryPriceRequest is the request type for the Query/Price RPC method.
message QueryPriceRequest {
  string asset = 1;
}

// QueryPriceResponse is the response type for the Query/Price RPC method.
message QueryPriceResponse {
  Price price = 1;
}

// QueryPricesRequest is the request type for the Query/Prices RPC method.
message QueryPricesRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryPricesResponse is the response type for the Query/Prices RPC method.
message QueryPricesResponse {
  repeated Price prices = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryValidatorRequest is the request type for the Query/Validator RPC method.
message QueryValidatorRequest {
  string validator_addr = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// QueryValidatorResponse is the response type for the Query/Validator RPC method.
message QueryValidatorResponse {
  ValidatorOracle validator = 1;
}

// QueryValidatorsRequest is the request type for the Query/Validators RPC method.
message QueryValidatorsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryValidatorsResponse is the response type for the Query/Validators RPC method.
message QueryValidatorsResponse {
  repeated ValidatorOracle validators = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryValidatorPriceRequest is the request type for the Query/ValidatorPrice RPC method.
message QueryValidatorPriceRequest {
  string validator_addr = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string asset = 2;
}

// QueryValidatorPriceResponse is the response type for the Query/ValidatorPrice RPC method.
message QueryValidatorPriceResponse {
  ValidatorPrice validator_price = 1;
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}
